# milan-events-searcher

./: .gitignore  README.md  app.py  docker-compose.yml  embeddings_analisi1.pkl  embeddings_economia.pkl  main.py  pyproject.toml  tmp.py
src/retrieval/: index.py  rag_engine.py  utils.py
src/tmp_retrieval/: async_runner.py  retriever.py  web_search.py
