[project]
name = "event-searcher"
version = "0.1.0"
description = "A hybrid search to look up Milan Christmas events 2025, using RAG and web search."
authors = [
    { name = "Daniel Colombaro", email =  "danielcolombaro00@gmail.com"},
    { name = "Alessandro Belotti", email = "abelotti00@gmail.com"}
]

license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
    "openai (>=2.8.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "llama-index (>=0.14.8,<0.15.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
